Añade la entidad de lugares
